# MathewsEtAl2023

./: pyproject.toml
parrotpy/: __init__.py
parrotpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
parrotpy/parrotpy.egg-info/: SOURCES.txt
