[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parrotpy"
authors = [
  {name = "Elijah Mathews", email = "apj@elijahmathews.com"},
]
requires-python = ">=3.7"
description = ""
license = {file = "LICENSE"}
dependencies = []
version = "0.0.1"

[tool.setuptools]
packages = ["parrotpy"]